@@ -2,6 +2,7 @@
 
 * PayPal Express gateway: Add unstore support [duff]
 * Stripe: Send application_fee with capture requests [melari]
+* Make #unstore method signature consistent across gateways [duff]
 
 == Version 1.33.0 (May 30, 2013)
 
